--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -2,38 +2,18 @@
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  justify-content: center;
   list-style: none;
   padding: 0;
-  justify-content: center;
 }
 
 .movieItem {
-  width: 200px;
   text-align: center;
+  width: 150px;
 }
 
-.movieLink {
-  text-decoration: none;
-  color: inherit;
-}
-
-.movieImage {
+.moviePoster {
   width: 100%;
-  height: auto;
   border-radius: 8px;
-}
-
-.noImage {
-  width: 100%;
-  height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #ccc;
-  border-radius: 8px;
-}
-
-.movieTitle {
-  font-size: 1rem;
-  margin-top: 10px;
+  margin-bottom: 8px;
 }
